<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, MainActivity!</string>
    <string name="app_name">ガススタ！</string>
    <string name="title">サンプル</string>
    <string name="about_label">about</string>
    <string name="settings_label">設定</string>
    <string name="settings_title">地図の設定</string>
    <string name="settings_search_title">検索条件</string>
    <string name="settings_etc_title">その他</string>
    <string name="settings_user_title">gogo.gsアカウント</string>
    <string name="settings_pin_type_key">settings_pin_type</string>
    <string name="settings_pin_type_title">ピンの種類</string>
    <string name="settings_pin_type_summary">地図上に表示するピンの種類を設定します</string>
    <string name="settings_pin_type_dialogtitle">ピンの種類</string>
    <string name="settings_penetration_key">settings_penetration</string>
    <string name="settings_penetration_title">操作パネルの透過率</string>
    <string name="settings_penetration_summary">操作パネルの透過率を設定します</string>
    <string name="settings_dist_key">settings_dist</string>
    <string name="settings_dist_title">中心からの距離</string>
    <string name="settings_dist_summary">指定された半径にあるガソリンスタンドを検索します</string>
    <string name="settings_dist_dialogtitle">中心からの距離</string>
    <string name="settings_num_title">最大取得件数</string>
    <string name="settings_num_summary">表示されるガソリンスタンドの件数を設定します</string>
    <string name="settings_num_dialogtitle">件数</string>
    <string name="settings_span_title">最終更新日</string>
    <string name="settings_span_summary">指定された期間に登録された情報を検索します</string>
    <string name="settings_span_dialogtitle">期間</string>
    <string name="settings_kind_title">油種</string>
    <string name="settings_kind_summary">検索するガソリンの油種を設定します</string>
    <string name="settings_kind_dialogtitle">油種</string>
    <string name="settings_member_summary">チェックを外すと現金フリー価格で検索します</string>
    <string name="settings_member_title">会員価格</string>
    <string name="settings_rtc_summary">24時間営業のガソリンスタンドのみ表示</string>
    <string name="settings_rtc_title">24時間営業</string>
    <string name="settings_self_summary">セルフ給油のあるガソリンスタンドのみ表示</string>
    <string name="settings_self_title">セルフ給油</string>
    <string name="settings_sort_dialogtitle">並び順</string>
    <string name="settings_sort_summary">検索結果の並び順を設定します</string>
    <string name="settings_sort_title">並び順</string>
    <string name="settings_sort_default">price</string>
    <string name="settings_no_postdata_title">価格情報の無いスタンド</string>
    <string name="settings_no_postdata_summary">km圏内の価格情報の無いスタンドを表示します</string>
    <string name="settings_no_postdata_default">false</string>
    <string name="settings_sharemsg_dialogtitle">共有メッセージ</string>
    <string name="settings_sharemsg_summary">共有メッセージを設定します</string>
    <string name="settings_sharemsg_title">共有メッセージ</string>
    <string name="settings_sharemsg_default">#kind : #price (#shop_name)</string>
    <string name="settings_user_id_dialogtitle">ユーザID</string>
    <string name="settings_user_id_summary"></string>
    <string name="settings_user_id_title">ユーザID</string>
    <string name="settings_passwd_dialogtitle">パスワード</string>
    <string name="settings_passwd_summary"></string>
    <string name="settings_passwd_title">パスワード</string>
    <string name="settings_twitter_summary">価格投稿時にtwitterに投稿します。gogo.gsのtwitter連携機能が有効になっている必要があります。</string>
    <string name="settings_twitter_title">twitter連携</string>
    <string name="settings_favorite_title">お気に入り設定</string>
    <string name="settings_favorite_interval_dialogtitle">同期間隔</string>
    <string name="settings_favorite_interval_summary">お気に入りの同期間隔を設定します</string>
    <string name="settings_favorite_interval_title">同期間隔</string>
    <string name="settings_favorite_interval_default">0</string>
    <string name="settings_favorite_notification_summary">同期完了時に通知します</string>
    <string name="settings_favorite_notification_title">同期完了通知</string>
    <string name="settings_favorite_sort_dialogtitle">並び順</string>
    <string name="settings_favorite_sort_summary">検索結果の並び順を設定します</string>
    <string name="settings_favorite_sort_title">並び順</string>
    <string name="settings_favorite_sort_default">create_date</string>
    <string name="dialog_title_err">エラー</string>
    <string name="dialog_message_out_of_range">データがありません</string>
    <string name="dialog_message_getting_data">データ取得中</string>
    <string name="dialog_message_posting_data">通信中</string>
    <string name="bug_report">バグを報告</string>
    <string name="bug_report_message">申し訳ありません。未知のエラーにより前回は強制終了しました。よろしければ、今後の修正のために開発者に今回のエラーを送信してください。</string>
    <string name="bug_report_positive_button">送信内容を確認</string>
    <string name="bug_report_negative_button">送信しない</string>
    <string name="tracking_code">UA-20090562-2</string>
    <string name="nend_spotid">6027</string>
    <string name="nend_apiid">348928903ae5e067a2259d63a1cfe916f3e465ad</string>
    <string name="adlantis_publisher_id">NDY2OA%3D%3D%0A</string>

</resources>